--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon --config nodemon.json test/tests.ts",
     "dev": "nodemon --config nodemon.json src/app.ts"
   },
   "repository": {
